# texforge

./: .gitignore  Cargo.toml  PHASE1_IMPLEMENTATION.md  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
docs/: config.example.toml.md
scripts/: install.ps1  install.sh
src/: config.rs  main.rs  manifest.rs  placeholders.rs  version.rs  version_checker.rs
src/cli/: mod.rs
src/commands/: build.rs  check.rs  clean.rs  config.rs  fmt.rs  init.rs  mod.rs  new.rs  template.rs
src/compiler/: mod.rs
src/diagrams/: mod.rs
src/domain/: document.rs  mod.rs  project.rs  template.rs
src/error/: mod.rs
src/formatter/: mod.rs
src/linter/: mod.rs
src/templates/: mod.rs
src/utils/: mod.rs
